--- a/webvirtmgr-deploy.yml
+++ b/webvirtmgr-deploy.yml
@@ -3,15 +3,10 @@
 # Changes made to this file may be overwritten.
 #
 ---
-- hosts: 
-    - nsg
-    - client
-  remote_user: root
+- hosts: kvmhost
+  remote_user: centos
+  become: true
+  become_method: sudo
   gather_facts: no
-  vars:
-    ansible_port: 22
-    ansible_user: root
   roles:
-    - dom-create
-    - pat_rules
-
+    - webvirtmgr
