=fixing some issues

--- a/roles/ovs-install/tasks/1_ovs_install.yml
+++ b/roles/ovs-install/tasks/1_ovs_install.yml
@@ -9,6 +9,7 @@
 - name: Disabling selinux
   selinux:
     state: disabled
+  ignore_errors: yes
 
 - name: Install packages that ovs will need
   yum: name={{ item }} state=present
